# MicButton

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  avr-attiny45.json  build.rs  flash.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
src/: lib.rs  logic.rs  main.rs
