[package]
name = "mic-button"
version = "0.1.0"
edition = "2021"
authors = ["Joscha Wagner"]
description = "ATtiny45 Mic Button Controller"
license = "MIT"
repository = "https://github.com/joschawagner/MicButton"

[dependencies]

[target.'cfg(target_arch = "avr")'.dependencies]
avr-device = { version = "0.8", features = ["attiny85", "rt"] }
panic-halt = "1.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
